fixed issue with menu overflowing and modified some coloring

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,19 +9,13 @@ body {
   text-align: center;
 }
 
-nav {
-  max-height: 50px;
-}
-
 nav ul {
-  list-style-type: none;
   margin: 0px;
 }
 
 nav li {
-  display: inline-block;
-  font-size: 18px;
-  margin: 0px;
+  font-size: 24px;
+  margin: 2px 10px;
   padding: 5px 8px;
   border: 1px solid #4B0082;
   border-radius: 10px;
